rendered and need to clean citations

--- a/climateadapt.qmd
+++ b/climateadapt.qmd
@@ -1,25 +1,26 @@
 ---
-title: "Climate Adaptation Readiness and Poverty"
+title: "Impact of Poverty on a City's Overall Readiness for Climate Adaptation"
 author: Liane Chen
 published: December 11, 2023
 format: html
 editor: visual
 ---
 
-# Impact of Poverty on Overall Readiness for Climate Adaptation
+# Introduction
 
-This blog post will explore analysis conducted on whether poverty impacts overall readiness to implement climate adaptation measures at both national and regional levels in the United States.
+This blog post will explore analysis conducted on whether poverty impacts a city's overall readiness to implement climate adaptation measures at both national and regional levels in the United States.
 
 ## Research Question
 
-What impact does the percentage of population in poverty have on overall readiness score for climate adaptation?
+What impact does the percentage of population in poverty have on a city's overall readiness score for climate adaptation?
 
 ### Motivation
-Climate change is upon us. The task of addressing its intensifying effects is daunting and more urgent than ever. 
+Climate change is upon us. The task of addressing its intensifying effects is daunting and more urgent than ever. We need to adapt to climate change now, which means taking action to adjust to its present and future impacts (EU 2023).
 
 At the global stage, we have seen governments iterate the importance of climate adaptation and resilience. Adopted in 2015 and signed in 2016, the Paris Agreement is a legally binding international treaty on climate change. All Parties to the Paris Agreement committed to strengthening the global response to climate change by increasing the ability of all to adapt and build resilience, and reduce vulnerability. 
+In order to do so, governments will need access to clear and accurate data as they move to prepare our economies and communities as a whole. It is important to consider the effects of adaptation on less resourced communities, as poor populations tend to be the most vulnerable to climate change and least able to adapt because of limited capacity to cope with climate variability and extremes. For example, many socially vulnerable groups (i.e., low-income households, communities of color, the unhoused, and immigrant populations) live in urban areas that are prone to extreme heat (urban heat islands). Some may also live in housing that does have adequate insulation or cooling. Others may not be able to afford air conditioning. It should be noted that this is just one aspect of social vulnerability and overlaps may occur. 
 
-In order to do so, governments will need access to clear and accurate data as they move to prepare our economies and communities as a whole. It is important to consider the effects of adaptation on less resourced communities, as poor populations tend to be the most vulnerable to climate change and least able to adapt because of limited capacity to cope with climate variability and extremes. Many socially vulnerable groups (i.e., low-income households, communities of color, the unhoused, and immigrant populations) live in urban areas that are prone to extreme heat (urban heat islands). Some may also live in housing that does have adequate insulation or cooling. Others may not be able to afford air conditioning. It should be noted that this is just one aspect of social vulnerability. 
+This analysis will provide exploratory analysis on whether poverty is a factor in how ready a city is for climate change. A total of 278 cities within the United States, including 50 states and Puerto Rico, whose populations are above 100,000 will be examined. 
 
 
 ### Data
@@ -29,32 +30,17 @@ The climate adaptation readiness and poverty data used for this analysis is publ
 
 ## Data Analysis
 
-I started with basic analysis to explore the data. Luckily, the two data files have common geospatial and temporal features that allowed for easy manipulation and use. There was minor cleaning required to correct inaccurate spelling and to ensure uniform formatting in column names. Once I checked that both data files had matching cities and number of rows, I combined the datasets based on city names to create a dataframe including percent of population in poverty information and overall climate adaptation readiness. I also removed certain columns to make the merged dataframe easier to work with. 
+I started with basic analysis to explore the data. Luckily, the two data files have common geospatial and temporal features that allowed for easy manipulation and use. Minor cleaning was required to correct inaccurate spelling and to ensure uniform formatting in column names. Once I checked that both data files had matching cities and number of observations, I combined the datasets based on city names to create a merged dataframe which includes percentage of population in poverty and overall climate adaptation readiness. I also removed certain columns to make the merged dataframe easier to work with. 
 
 Next, I chose to conduct a simple linear regression model as the two variables I am studying are numeric values. I used 'ggplot' to create a scatter plot comparing the percent of population in poverty to the climate readiness score for each city. Then I used 'geom_smooth()' to plot the linear regression between poverty and climate readiness. As a basic gut check, the line shows that there is a negative correlation between the two variables, which makes sense as higher poverty would decrease ability to implement costly climate adaptation measures. 
 
-Slope
-
-Correlation coefficient
-
-p-value
-
 I also conducted hypothesis testing to see whether there was a difference in the impact of poverty on climate readiness between two regions (West and South). 
 
-point estimate
-
-standard error
-
-z-score
-
-t-test
-
-reject the null
 
 ```{r}
 knitr::opts_chunk$set(echo = TRUE)
 
-# Load all the packages needed here
+# Load all the packages needed 
 library(tidyverse)
 library(readr)
 library(gt)
@@ -65,7 +51,7 @@ library(dplyr)
 library(janitor)
 library(ggplot2)
 
-# Set the filepath here
+# Set the filepath  
 rootdir <- ("/Users/lianechen/Documents/MEDS_2023/Fall_2023/EDS222/Final/eds222-climateadapt")
 
 datadir <- file.path(rootdir,"data")
@@ -84,69 +70,77 @@ readiness <- clean_names(readiness)
 ```
 
 ```{r}
-# Explore data
+# Check number of observations for city_indicators file
 nrow(city_indicators)
 ```
 
 ```{r}
+# Check number of observations for readiness file
 nrow(readiness)
 ```
 
 ```{r}
+# Merge city_indicators and readiness files by city name
 merged <- merge(city_indicators, readiness, by = "city", all = TRUE)
 
+# check that number of obersvations is consistent
 nrow(merged)
 ```
 
 ```{r}
+# clean column names
 colnames(merged)[colnames(merged) == "geo_id.x"] <- "geo_id"
 colnames(merged)[colnames(merged) == "state.x"] <- "state"
 colnames(merged)[colnames(merged) == "latitutde"] <- "latitude"
 ```
 
 ```{r}
+# streamline the columns so only relevant ones are kept
 income_readiness <- merged[, c("city", "state", "geo_id", "percent_of_population_spending_over_50_percent_of_income_on_rent_2015", "percent_of_population_in_poverty_2015", "latitude", "longitude", "county", "region", "median_income", "overall_readiness")]
 ```
 
-```{r}
-#create scatterplot to understand information
 
+```{r}
+# create scatter plot with simple regression line included
 ggplot(data=income_readiness, aes(x=percent_of_population_in_poverty_2015, y = overall_readiness)) + 
-  geom_point(size=3) + 
-  theme_bw() + 
-  labs(title = "Scatterplot of % in Poverty vs Overall Readiness for Climate Adapatation",
+  geom_point(alpha=0.1, size=3) + 
+  geom_smooth(method='lm', formula= y~x, color="lightcoral", se=F, linewidth=1.5) +
+  theme_bw() +
+  labs(title = "Scatterplot of % in Poverty vs Overall Readiness with Regression Line",
        x = "Percent of population in poverty (2015)", y = "Overall readiness")
 ```
 
+
+The slope of the regression line shows to be slightly negative, as y decreases while x increases. This seems to make intuitive sense, as increased poverty could relate to decreased ability to adapt to climate variability and extremes.
+
+The slope is not too steep, so let's take a look at correlation to see how strongly poverty impacts climate adaptation readiness. 
+
+
 ```{r}
-# Compute the correlation coefficient to quantify the strength and direction of the relationship
+# Compute the correlation coefficient to quantify the strength and direction of the relationship between poverty and climate readiness
 
 cor(income_readiness$percent_of_population_in_poverty_2015, income_readiness$overall_readiness)
 ```
 
-```         
+     
 Magnitude of the Correlation Coefficient:
 
-The correlation coefficient ranges from -1 to 1.
+The correlation coefficient ranges from -1 to 1. 
 A value of -1 indicates a perfect negative correlation, 0 indicates no correlation, and 1 indicates a perfect positive correlation.
-In this case, the value is close to 0, which suggests a weak correlation.
+
+In this case, the value is very close to 0, which suggests a weak correlation.
+
 Sign of the Correlation Coefficient:
 
 The negative sign indicates a negative correlation.
 A negative correlation means that as one variable (percentage in poverty) increases, the other variable (overall adaptation readiness) tends to decrease.
+
+This matches the slight negative slope of the regression line.  
+
 Interpretation:
 
-With a correlation coefficient of -0.1565957, there is a slight tendency that areas with a higher percentage of people in poverty may have lower overall adaptation readiness.
-However, the correlation is weak, suggesting that other factors not considered in this analysis may play a more significant role in determining overall adaptation readiness.
-Caution:
+With a correlation coefficient of -0.1565957, there is a slight tendency that areas with a higher percentage of people in poverty may have lower overall adaptation readiness. However, the correlation is weak, suggesting that other factors not considered in this analysis may play a more significant role in determining overall adaptation readiness.
 
-Correlation does not imply causation. Even though there is a correlation, it doesn't necessarily mean that poverty causes lower adaptation readiness or vice versa. Other factors might contribute to the observed relationship.
-Further Analysis:
-
-Consider exploring additional variables or conducting regression analysis to better understand the specific nature and strength of the relationship, while controlling for potential confounding variables.
-Assess the statistical significance of the correlation coefficient to determine whether the observed relationship is likely due to chance.
-In summary, the negative correlation coefficient suggests a weak tendency for areas with a higher percentage of people in poverty to have lower overall adaptation readiness. However, the strength of this relationship is not strong, and it's important to interpret such correlations cautiously, considering other factors that might influence the observed pattern.
-```
 
 ```{r}
 # Linear regression model
@@ -155,6 +149,34 @@ linear_regression <- lm(overall_readiness ~ percent_of_population_in_poverty_201
 # Summary of the model
 summary(linear_regression)
 ```
+
+
+Intercept (0.5098146):
+
+The intercept represents the estimated value of the dependent variable when all independent variables are zero.
+
+In this context, when the percentage of the population in poverty is zero, the estimated value of overall adaptation readiness is approximately 0.5098.
+
+
+```{r}
+# Hypothesis testing
+summary(linear_regression)$coefficients
+```
+
+
+Percentage of Population in Poverty Coefficient (-0.0023953):
+
+The coefficient for the variable "percent_of_population_in_poverty_2015" represents the estimated change in the dependent variable (overall adaptation readiness) for a one-unit change (one-percent) in the independent variable (percentage of population in poverty).
+
+In this case, for every one-unit increase in the percentage of the population in poverty, the overall adaptation readiness is estimated to decrease by approximately 0.0024.
+
+The t-value of -2.634 indicates that this coefficient is statistically significant (p = 0.00891), suggesting that the percentage of the population in poverty has a significant effect on overall adaptation readiness.
+
+In summary, the model suggests that both the intercept and the percentage of the population in poverty are statistically significant in predicting overall adaptation readiness. 
+
+## Hypothesis Testing
+
+I am curious whether there is a difference between how poverty impacts climate readiness in different regions of the country. Let's conduct a hypothesis test. 
 
 ```{r}
 # compute point estimate
@@ -194,75 +216,37 @@ two_tailed
 ```
 
 ```         
-P-value and Hypothesis Testing for Different Regions (West and South)
+Interpreting P-value and Hypothesis Testing for Different Regions (West and South)
 p-value: 0.01698
 
-Null: The mean score for overall climate adaptation readiness in the West region is equal to the mean score for overall climate adaptation readiness in the South region (no difference).
+Null: The mean score for overall climate readiness in the West region is equal to the mean score for overall climate readiness in the South region (no difference).
         H_0: u_WestReadiness - u_SouthReadiness = 0
         
-Alternative: The mean score for overall climate adaptation readiness in the West region is NOT equal to the mean score for overall climate adaptation readiness in the South region (yes, there is a difference).
+Alternative: The mean score for overall climate readiness in the West region is NOT equal to the mean score for overall climate readiness in the South region (yes, there is a difference).
        H_A: u_WestReadiness - u_SouthReadiness != 0
 
-Given that the p-value is less than the significance level of alpha=0.05, we reject the null hypothesis. Therefore, we can say that there is a difference in mean overall climate adaptation readiness between the West and the South. 
-```
-
-```         
-P-value and Hypothesis Testing:
-p-value: 0.00891
-
-Null: The percent of population in poverty in 2015 does not have an impact on overall climate adaptation readiness score for a city (no impact).
-        H_0: u_nonpoverty - u_poverty = 0
-        
-Alternative: The percent of population in poverty in 2015 does not have an impact on overall climate adaptation readiness score for a city (yes, there is impact).
-       H_A: u_nonpoverty - u_poverty != 0
-
-Given that the p-value is less than the significance level of alpha=0.05, we reject the null hypothesis.
-
-Intercept (0.5098146):
-
-The intercept represents the estimated value of the dependent variable when all independent variables are zero.
-In this context, when the percentage of the population in poverty is zero, the estimated value of the overall adaptation readiness is approximately 0.5098.
-
-Percentage of Population in Poverty Coefficient (-0.0023953):
-
-The coefficient for the variable "percent_of_population_in_poverty_2015" represents the estimated change in the dependent variable (overall adaptation readiness) for a one-unit change (change of one-percent) in the independent variable (percentage of population in poverty).
-
-In this case, for every one-unit increase in the percentage of the population in poverty, the overall adaptation readiness is estimated to decrease by approximately 0.0024.
-
-The t-value of -2.634 indicates that this coefficient is statistically significant (p = 0.00891), suggesting that the percentage of the population in poverty has a significant effect on overall adaptation readiness.
-
-In summary, the model suggests that both the intercept and the percentage of the population in poverty are statistically significant in predicting overall adaptation readiness. 
-```
-
-```{r}
-ggplot(data=linear_regression, aes(x=percent_of_population_in_poverty_2015, y = overall_readiness)) + 
-  geom_point(alpha=0.1, linewidth=3) + 
-  geom_smooth(method='lm', formula= y~x, color="lightcoral", se=F, size=1.5) +
-  theme_bw() +
-  labs(title = "Regression line overlaid on scatter plot",
-       x = "Percent of population in poverty (2015)", y = "Overall readiness")
-```
-
-```{r}
-# Hypothesis testing
-summary(linear_regression)$coefficients
+Given that the p-value is less than the significance level of alpha=0.05, we reject the null hypothesis. Therefore, we can say that there is a difference in mean overall climate readiness between the West and the South. 
 ```
 
 
 ## Results
-We are able to reject the null hypothesis and conclude that the percentage of people living in poverty does have an impact on a city's climate adaptation readiness score. It should be noted that while there is a correlation, it is relatively weak, which suggests that further analysis should be completed. 
+We are able to reject the null hypothesis and conclude that the percentage of people living in poverty does have an impact on a city's climate readiness score. It should be noted that while there is a correlation, it is relatively weak, which suggests that further analysis should be completed. 
 
 
 ## Future Work
+
+Correlation does not imply causation. Even though we found above that there is a correlation, it doesn't necessarily mean that poverty causes lower adaptation readiness or vice versa. Other factors might contribute to the observed relationship. Future work should explore additional variables and regression analysis to better understand the specific nature and strength of the relationship, with controls included. Further assess the statistical significance of the correlation coefficient to determine whether the observed relationship is likely due to chance.
+
+In summary, the negative correlation coefficient suggests a weak tendency for areas with a higher percentage of people in poverty to have lower overall adaptation readiness. The strength of this relationship is not strong, and it's important to interpret such correlations cautiously, considering other factors that might influence the observed pattern. Potential areas for further work are described below. 
 
 ### More Cities Data
 The datasets used included 278 cities within the United States, including 50 states and Puerto Rico, whose populations are above 100,000. However, increased data for cities with population under 100,000 would provide a broader understanding of potential opportunity areas for climate adaptation. 
 
 ### Additional Years of Poverty Data
-This analysis would benefit from additional years of data for percentage of populations living in poverty. While these numbers would likely not vary too dramatically between years, it would provide more accurate data. 
+This analysis would benefit from additional years of data for percentage of populations living in poverty from the Census. While these numbers would likely not vary too dramatically between years, it would provide more accurate data. 
 
 ### Wealth Data
-We have available data for percentage of populations living in poverty, but what about wealthy populations? It would be helpful to be able to compare whether wealth has an impact on climate adaptation readiness. 
+We have available data for percentage of populations living in poverty, but what about wealthy populations? It would be helpful to be able to statistically compare whether wealth has an impact on climate adaptation readiness. 
 
 
 
@@ -273,6 +257,7 @@ Git
 ```
 
 ## Literature Cited
+https://climate.ec.europa.eu/eu-action/adaptation-climate-change_en
 https://gain-uaa.nd.edu/about/
 https://www.un.org/en/climatechange/climate-adaptation
 https://unfccc.int/topics/adaptation-and-resilience/the-big-picture/new-elements-and-dimensions-of-adaptation-under-the-paris-agreement-article-7 
